--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -4,10 +4,10 @@
   become: yes
   tasks:
     - name: Copy the k8-ubuntu.sh script to remote nodes
-      ansible.builtin.copy:
+      copy:
         src: ./k8-ubuntu.sh
-        dest: /tmp/k8-ubuntu.sh
+        dest: /home/k8-ubuntu.sh
         mode: '0755'
 
     - name: Run the k8-ubuntu.sh script
-      command: /tmp/k8-ubuntu.sh
+      shell: /home/k8-ubuntu.sh
